--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style="background-color: #0f172a">
+  <body style="background-color: #121418">
     <div id="root"></div>
     <script
       type="module"
